added date created

--- a/web/views/info.handlebars
+++ b/web/views/info.handlebars
@@ -611,7 +611,7 @@
                         <div class="infoLine"> <span class="infoLineField">Relationship</span> <span class="infoLineData">Single</span></div>
                         <div class="infoLine"> <span class="infoLineField">Avatars</span> <span class="infoLineData rightAlign">0</span> </div>
                         <div class="infoLine"> <span class="infoLineField">Win Rate</span> <span class="infoLineData">{{rate}} % (W:{{win}} / L:{{loss}})</span> </div>
-                        <div class="infoLine"> <span class="infoLineField">Joined DB</span> <span class="infoLineData">Feb. 01, 2017, 0:00 p.m.</span>                            </div>
+                        <div class="infoLine"> <span class="infoLineField">Joined DB</span> <span class="infoLineData">{{MyDateRegister}}</span>                            </div>
                     </div>
                 </div>
                 <div class="Box hide" id="GPStats">
