Added event cash

--- a/web/views/guild.handlebars
+++ b/web/views/guild.handlebars
@@ -79,7 +79,7 @@
     <div id="fb-root"></div>
     <div id="titleTable">
         <div id="titleTableLeft" class="cell">
-            <span id="icon"></span> <span id="titleText"><a href="/">DragonBound</a> > <a href="/guild">Guild</a> > <a href="/guild/{{Name}}">{{Name}}</a></span>
+            <span id="icon"></span> <span id="titleText"><a href="/">MegaBound</a> > <a href="/guild">Guild</a> > <a href="/guild/{{Name}}">{{Name}}</a></span>
         </div>
         <div id="titleTableRight" class="cell right">
             <!--a href="/login?next=/guild/{{guild}}">Login</a-->
