--- a/web/views/info.handlebars
+++ b/web/views/info.handlebars
@@ -445,7 +445,7 @@
     <div id="fb-root"></div>
     <div id="titleTable">
         <div id="titleTableLeft" class="cell">
-            <span id="icon"></span> <span id="titleText"><a href="/">DragonBound</a> > <a href="/user">User</a> > <a href="/user/{{game_id}}">{{game_id}}</a></span>
+            <span id="icon"></span> <span id="titleText"><a href="/">MegaBound</a> > <a href="/user">User</a> > <a href="/user/{{game_id}}">{{game_id}}</a></span>
         </div>
         <div id="titleTableRight" class="cell right">
             {{#if login}}
