--- a/web/views/settings.handlebars
+++ b/web/views/settings.handlebars
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>My Settings - DragonBound</title>
+    <title>My Settings - MegaBound</title>
     <script src="/static/js/jquery-2.1.4.min.js"></script>
     <script src="/static/js/QTransform.js"></script>
     <link rel="stylesheet" href="/static/DragonBook/DragonBook.min.css?15" />
@@ -20,7 +20,7 @@
     <div id="fb-root"></div>
     <div id="titleTable">
         <div id="titleTableLeft" class="cell">
-            <span id="icon"></span> <span id="titleText"><a href="/">DragonBound</a> > My Settings</span>
+            <span id="icon"></span> <span id="titleText"><a href="/">MegaBound</a> > My Settings</span>
         </div>
         <div id="titleTableRight" class="cell right">
             <a href="/user/{{game_id}}">{{game_id}}</a> | <a href="/settings">Settings</a> | <a href="/logout?next=/settings">Logout</a>
